@@ -467,6 +467,15 @@ setMethod(
 
   })
 
+
+#' @rdname plotHeatmap
+setMethod(
+  f = "plotHeatmap",
+  signature = signature(data = "data.frame"),
+  definition = function(data,...){
+	  plotHeatmap(data.matrix(data),...)
+  }
+)
 #' @rdname plotHeatmap
 setMethod(
     f = "plotHeatmap",
@@ -592,7 +601,10 @@ setMethod(
         #browser()
         tmpDf<-do.call("data.frame",lapply(1:ncol(sampleData),function(ii){factor(sampleData[,ii])}))
         names(tmpDf)<-colnames(sampleData)
-        if(!is.null(whSampleDataCont)) tmpDf[,whSampleDataCont]<-sampleData[,whSampleDataCont]
+        if(!is.null(whSampleDataCont)){
+        	if(logical(whSampleDataCont)) whSampleDataCont<-which(whSampleDataCont)
+			if(length(whSampleDataCont)>0) tmpDf[,whSampleDataCont]<-sampleData[,whSampleDataCont]
+        } 
         annCol<-tmpDf
         #browser()
         convertNames <- TRUE
@@ -643,6 +655,19 @@ setMethod(
         } else {
           annColors<-clusterLegend #in case give in format wanted by aheatmap to begin with
         }
+		#remove any unused level colors to clean up legend and make them in same order as in annCol factor
+		whInAnnColors<-which(names(annColors)%in% colnames(annCol))
+		if(!is.null(whSampleDataCont) & length(whSampleDataCont)>0){
+			whInAnnColors<-setdiff(whInAnnColors,whSampleDataCont)
+		} 
+		prunedList<-lapply(whInAnnColors,function(ii){
+			nam<-names(annColors)[[ii]]
+			x<-annColors[[ii]]
+			levs<-levels(annCol[,nam])
+			x<-x[levs]
+		})
+		names(prunedList)<-names(annColors)[whInAnnColors]
+		annColors[whInAnnColors]<-prunedList
       }
       else{
         annCol<-NA
